--- a/template/iCMS/mobile/user/manage/article.htm
+++ b/template/iCMS/mobile/user/manage/article.htm
@@ -8,7 +8,7 @@
 	<table class="table table-striped">
 		<thead>
 			<tr>
-				<th><span class="label label-info">分类</span> 标题</th>
+				<th><span class="label label-info">Категории</span> 标题</th>
 			</tr>
 		</thead>
 		<tbody>
@@ -20,7 +20,7 @@
 					<span class="label label-danger">审核中</span>
 					<!--{/if}-->
 					<!--{if $article_list.status=="2"}-->
-					<span class="label label-default">回收站</span>
+					<span class="label label-default">В корзине</span>
 					<!--{/if}-->
 					<!--{if $article_list.status=="4"}-->
 					<span class="label">未通过审核</span>
