--- a/template/iCMS/desktop/user/home.htm
+++ b/template/iCMS/desktop/user/home.htm
@@ -1,14 +1,9 @@
 <!DOCTYPE html>
 <html lang="ru">
-
 <head>
-    <title>
-        <!--{$user.nickname}-->的
-        <!--{$site.title}-->
-        <!--{$site.seotitle}-->
-    </title>
+    <title><!--{$user.nickname}--></title>
     <meta name="keywords" content="<!--{$site.keywords}-->" />
-    <meta name="description" content="<!--{$user.nickname}-->的<!--{$site.title}-->" />
+    <meta name="description" content="<!--{$user.nickname}-->" />
     <meta name="mobile-agent" content="format=html5;url=<!--{$user.urls.home}-->" />
     <!--{iCMS:public:ui}-->
     <!--{include file="iCMS://user.css.htm"}-->
@@ -71,14 +66,14 @@
             <!--{if $status.isme}-->
             <div class="mod-box home-btn">
                 <a href="<!--{iCMS:router url='user:publish'}-->" class="btn btn-success"><i class="icon-publish"></i>Добавить новость</a>
-                <a href="<!--{iCMS:router url='user:manage'}-->" class="btn btn-primary"><i class="icon-manage"></i> 主页管理</a>
+                <a href="<!--{iCMS:router url='user:manage'}-->" class="btn btn-primary"><i class="icon-manage"></i> Управление</a>
             </div>
             <!--{/if}-->
             <div class="mod-box home-category">
                 <div class="mod-title">
-                    <h3 class="mod-txt">分类<span>CATEGORY</span></h3>
+                    <h3 class="mod-txt">Категории<span>CATEGORY</span></h3>
                     <!--{if $status.isme}-->
-                    <span class="fr"><a href="<!--{iCMS:router url='user:category'}-->" target="_blank" class="more">管理&gt;&gt;</a></span>
+                    <span class="fr"><a href="<!--{iCMS:router url='user:category'}-->" target="_blank" class="more">управление&gt;&gt;</a></span>
                     <!--{/if}-->
                 </div>
                 <div class="mod-content">
@@ -96,7 +91,7 @@
                 <div class="mod-title">
                     <h3 class="mod-txt">粉丝<span>FANS</span></h3>
                     <!--{if $status.isme}-->
-                    <span class="fr"><a href="<!--{iCMS:router url='user:manage:fans'}-->" target="_blank" class="more">管理&gt;&gt;</a></span>
+                    <span class="fr"><a href="<!--{iCMS:router url='user:manage:fans'}-->" target="_blank" class="more">управление&gt;&gt;</a></span>
                     <!--{/if}-->
                 </div>
                 <div class="mod-content">
@@ -114,9 +109,9 @@
             </div>
             <div class="mod-box home-followList">
                 <div class="mod-title">
-                    <h3 class="mod-txt">关注<span>FOLLOW</span></h3>
+                    <h3 class="mod-txt">Подписчики<span>FOLLOW</span></h3>
                     <!--{if $status.isme}-->
-                    <span class="fr"><a href="<!--{iCMS:router url='user:manage:follow'}-->" target="_blank" class="more">管理&gt;&gt;</a></span>
+                    <span class="fr"><a href="<!--{iCMS:router url='user:manage:follow'}-->" target="_blank" class="more">управление&gt;&gt;</a></span>
                     <!--{/if}-->
                 </div>
                 <div class="mod-content">
@@ -135,15 +130,15 @@
             </div>
             <div class="mod-box statistics">
                 <div class="mod-title">
-                    <h3 class="mod-txt">统计 <span>STATISTICS</span></h3>
+                    <h3 class="mod-txt">Статистика <span>STATISTICS</span></h3>
                 </div>
                 <div class="mod-content">
                     <ul>
-                        <li><span class="fs12">今日访问:<!--{$user.hits_today}--></span></li>
-                        <li><span class="fs12">昨日访问:<!--{$user.hits_yday}--></span></li>
-                        <li><span class="fs12">本周访问:<!--{$user.hits_week}--></span></li>
-                        <li><span class="fs12">本月访问:<!--{$user.hits_month}--></span></li>
-                        <li><span class="fs12">所有访问:<!--{$user.hits}--></span></li>
+                        <li><span class="fs12">Просмотры за сегодня:<!--{$user.hits_today}--></span></li>
+                        <li><span class="fs12">Просмотры за вчера:<!--{$user.hits_yday}--></span></li>
+                        <li><span class="fs12">Просмотры за неделю:<!--{$user.hits_week}--></span></li>
+                        <li><span class="fs12">Просмотры за месяц:<!--{$user.hits_month}--></span></li>
+                        <li><span class="fs12">Просмотры за весь период:<!--{$user.hits}--></span></li>
                     </ul>
                 </div>
             </div>
