--- a/template/iCMS/desktop/user/manage/article.htm
+++ b/template/iCMS/desktop/user/manage/article.htm
@@ -9,7 +9,7 @@
         <thead>
             <tr>
                 <th style="width:90px;">#Id</th>
-                <th><span class="label label-default">分类</span> 标题</th>
+                <th><span class="label label-default">Категории</span> 标题</th>
                 <th style="width:150px;">Просмотры/Комментарии/顶/踩</th>
                 <th style="width:120px;">Категории</th>
                 <th style="width:150px;">Операции</th>
@@ -27,7 +27,7 @@
                     <span class="label label-important">审核中</span>
                     <!--{/if}-->
                     <!--{if $article_list.status=="2"}-->
-                    <span class="label label-inverse">回收站</span>
+                    <span class="label label-inverse">В корзине</span>
                     <!--{/if}-->
                     <!--{if $article_list.status=="4"}-->
                     <span class="label">未通过审核</span>
