--- a/template/iCMS/mobile/user/manage/article.htm
+++ b/template/iCMS/mobile/user/manage/article.htm
@@ -35,7 +35,7 @@
 							<a href="<!--{$article.manage}-->&cid=<!--{$article_list.cid}-->">
 								<span class="label label-primary"><!--{$article_list.category.name}--></span>
 							</a>
-							<a class="btn btn-success btn-sm" href="<!--{$article.edit}-->&id=<!--{$article_list.id}-->" title="编辑文章"><i class="fa fa-edit"></i> Изменить </a>
+							<a class="btn btn-success btn-sm" href="<!--{$article.edit}-->&id=<!--{$article_list.id}-->" title="编辑文章"><i class="fa fa-edit"></i> Редактировать </a>
 							<!--{if $article_list.status=="2"}-->
 							<a href="javascript:;" class="btn btn-danger btn-sm" data-id="<!--{$article_list.id}-->" data-action="delete" title="彻底删除"><i class="fa fa-times"></i> Удалить</a>
 							<a href="javascript:;" class="btn btn-default btn-sm" data-id="<!--{$article_list.id}-->" data-action="renew" title="还原"><i class="fa fa-reply-all"></i> 还原</a>
