--- a/app/admincp/ui/admincp.css
+++ b/app/admincp/ui/admincp.css
@@ -25,7 +25,6 @@ body { background-color: #f0f5f7; color: #67809F; }
 .input-append input:last-child, .input-append select:last-child { -webkit-border-radius: 0 4px 4px 0 !important; -moz-border-radius: 0 4px 4px 0 !important; border-radius: 0 4px 4px 0 !important; }
 .ui-datepicker{width: 140px;}
 /* bootstrap admincp */
-.table th { background: #fafafa url("img/table_head.gif") repeat-x 0 100%; }
 .table td { background-color: #fff; }
 .table tbody .checker { margin-left: 3px !important; }
 .help-inline hr { margin: 2px 0px; }
@@ -330,7 +329,7 @@ background-color: #efefef;
 .widget-title .nav-tabs li:first-child a { /* border-left: medium none !important; border-left: 1px solid #DDDDDD;  */ }
 .widget-title .nav-tabs li a:hover { /* background-color: transparent !important; border-color: #D6D6D6; border-width: 0 1px;  */
 color: #4d7284; }
-.widget-title .nav-tabs li.active a { color: #2c3e50; -webkit-box-shadow: 0 -2px 0 #057AFD; box-shadow: 0 -2px 0 #057AFD; }
+.widget-title .nav-tabs li.active a { color: #2c3e50; -webkit-box-shadow: 0 -2px 0 #ff6b6b; box-shadow: 0 -2px 0 #ff6b6b; }
 .widget-title .nav-tabs li.active a:hover { border: none; border-right: 1px solid #DDDDDD; }
 .widget-title span.icon { border-right: 1px solid #cdcdcd; padding: 8px 10px 5px 11px; float: left; opacity: .7; }
 .widget-title span.icon i { font-size: 16px; }
@@ -452,7 +451,7 @@ div.dataTables_wrapper .ui-widget-header { border-right: medium none; border-top
 .dataTables_filter { color: #878787; font-size: 11px; left: 0; margin: 4px 8px 2px 10px; position: absolute; text-align: left; }
 .dataTables_filter input { margin-bottom: 0; }
 .DataTables_sort_icon { margin-top: 1px; }
-.table th { height: auto; font-size: 12px; padding: 5px 10px 2px; border-bottom: 0; text-align: center; color: #4d7284; }
+.table th { height: auto; font-size: 12px; padding: 5px 5px 5px; border-bottom: 0; text-align: center; color: #4d7284; }
 .table th:first-child i { font-size: 16px; text-align: center; color: #4d7284; }
 .table.with-check tr th:first-child, .table.with-check tr td:first-child { width: 10px; }
 .table.with-check tr th:first-child i { margin-top: -2px; opacity: 0.6; }
