--- a/template/iCMS/desktop/user/manage/article.htm
+++ b/template/iCMS/desktop/user/manage/article.htm
@@ -46,7 +46,7 @@
                     </a>
                 </td>
                 <td class="action">
-                    <a class="tip" href="<!--{$article.edit}-->id=<!--{$article_list.id}-->" title="编辑文章"><i class="fa fa-edit"></i> Изменить </a>
+                    <a class="tip" href="<!--{$article.edit}-->id=<!--{$article_list.id}-->" title="编辑文章"><i class="fa fa-edit"></i> Редактировать </a>
                     <!--{if $article_list.status=="2"}-->
                     <a href="javascript:;" class="tip ml10" data-id="<!--{$article_list.id}-->" data-action="delete" title="彻底删除"><i class="fa fa-trash-o"></i> Удалить</a>
                     <a href="javascript:;" class="tip ml10" data-id="<!--{$article_list.id}-->" data-action="renew" title="还原"><i class="fa fa-reply-all"></i> 还原</a>
