--- a/template/iCMS/desktop/user/findpwd.htm
+++ b/template/iCMS/desktop/user/findpwd.htm
@@ -84,7 +84,7 @@
               <p class="help-block tip-error tip-seccode">Введите защитный код</p>
             </div>
             <div class="form-group submit">
-              <button class="btn btn-large btn-primary" id="findpwd-submit" type="button">提 交</button>
+              <button class="btn btn-large btn-primary" id="findpwd-submit" type="button">Отправить</button>
             </div>
           </div>
         </div>
