--- a/template/iCMS/mobile/user/findpwd.htm
+++ b/template/iCMS/mobile/user/findpwd.htm
@@ -88,7 +88,7 @@
                 <p class="help-block tip-error tip-seccode">Пожалуйста, введите символы на картинке!</p>
             </div>
             <div class="clearfix mt10">
-                <button type="submit" id="findpwd-submit" class="btn btn-primary btn-lg btn-block">提 交</button>
+                <button type="submit" id="findpwd-submit" class="btn btn-primary btn-lg btn-block">Отправить</button>
             </div>
             <div class="clearfix mt10">
                 <a class="btn btn-success" href="<!--{iCMS:router url='user:register'}-->">
