--- a/template/iCMS/public.ui.htm
+++ b/template/iCMS/public.ui.htm
@@ -32,7 +32,7 @@ iCMS.init({
         seccode: "<!--{$iCMS.CONFIG.comment.seccode}-->"
     },
     DIALOG: {
-        title: '<!--{$site.name}--> PM'
+        title: 'Системное окно'
     },
 });
 </script>
