--- a/template/www/desktop/content.htm
+++ b/template/www/desktop/content.htm
@@ -69,7 +69,7 @@
                             <i class="fa fa-thumbs-down"></i>
                             <span i="vote_bad_num" class="like-num"><!--{$content.bad}--></span>
                         </div>
-                        <div i="favorite:<!--{$APP.app}-->" class="btn btn-primary btn-sm" title="非常棒!收藏起来">
+                        <div i="favorite:<!--{$APP.app}-->" class="btn btn-primary btn-sm" title="Добавить в избранное">
                             <i class="fa fa-heart"></i>
                             <span i="favorite_num" class="favorite-num"><!--{$content.favorite}--></span>
                         </div>
