[F] исправлена проблема совместимости

--- a/template/www/desktop/article.htm
+++ b/template/www/desktop/article.htm
@@ -37,9 +37,10 @@
                         <!--{$article.link}-->
                     </li>
                 </ul>
+				<!--{$article|print_r}-->
 				
 				============
-				<!--{iCMS:prop:array loop="true" field="lang" sapp="lang"}-->
+<!--{iCMS:prop:array loop="true" field="lang" sapp="test"}-->
 <a href="<!--{$prop_array.url}-->" id="<!--{$prop_array.name}-->" >
 <!--{$prop_array.name}-->
 </a>
