--- a/template/iCMS/mobile/user/findpwd.htm
+++ b/template/iCMS/mobile/user/findpwd.htm
@@ -78,8 +78,8 @@
             </div>
             <div class="form-group">
                 <label for="uname" class="control-label">Электронная почта:</label>
-                <input type="text" name="uname" class="form-control" id="uname" placeholder="请填写你注册时所用的邮箱">
-                <p class="help-block tip-error tip-uname tip-mail">请填写你注册时所用的邮箱</p>
+                <input type="text" name="uname" class="form-control" id="uname" placeholder="Введите адрес электронной почты, который вы использовали при регистрации.">
+                <p class="help-block tip-error tip-uname tip-mail">Введите адрес электронной почты, который вы использовали при регистрации.</p>
             </div>
             <div class="form-group seccode-wrap">
                 <label for="seccode">Защитный код</label>
