--- a/template/www/mobile/article.htm
+++ b/template/www/mobile/article.htm
@@ -118,7 +118,7 @@
                     <a i="vote:article:bad" class="like-btn">
                         <i class="like-icon down"></i>
                         <span i="vote_bad_num" class="like-num"><!--{$article.bad}--></span>
-                        <span class="like-txt">踩</span>
+                        <span class="like-txt">Не понравилось</span>
                     </a>
                     <a i="favorite:article" class="favorite-btn" title="Добавили в избранное">
                         <i class="favorite-icon"></i>
