--- a/template/www/mobile/content.htm
+++ b/template/www/mobile/content.htm
@@ -52,7 +52,7 @@ $(function(){
                     </header>
                     <div class="article_body">
                         <div class="content">
-                            所有可调用变量,具体调用请自行修改
+                            Пример вызова контента (print_r)
                             <pre>
                                 <!--{$content|print_r}-->
                             </pre>
@@ -69,7 +69,7 @@ $(function(){
                     <a i="vote:<!--{$APP.app}-->:bad" class="like-btn">
                         <i class="like-icon down"></i>
                         <span i="vote_bad_num" class="like-num"><!--{$content.bad}--></span>
-                        <span class="like-txt">踩</span>
+                        <span class="like-txt">Не понравилось</span>
                     </a>
                 </div>
                 <div class="clearfix"></div>
@@ -86,33 +86,7 @@ $(function(){
                             <!--{$content_next.title}-->
                         </a><b>:Вперед</b></p>
                 </div>
-                <div class="share">
-                    <div class="share-icon">
-                        <div class="t">分享到</div>
-                        <div class="bdsharebuttonbox" id="share-bd">
-                            <a href="#" class="bds_qzone" data-cmd="qzone" title="分享到QQ空间"></a>
-                            <a href="#" class="bds_tsina" data-cmd="tsina" title="分享到新浪微博"></a>
-                            <a href="#" class="bds_tqq" data-cmd="tqq" title="分享到腾讯微博"></a>
-                            <a href="#" class="bds_weixin" data-cmd="weixin" title="分享到微信"></a>
-                            <a href="#" class="bds_more" data-cmd="more"></a>
-                        </div>
-                    </div>
-                    <script>
-                    window._bd_share_config = {
-                            common: {
-                                bdText: '<!--{$content.title}-->',
-                                bdDesc: '<!--{$content.description|html2txt}-->',
-                                bdUrl: '<!--{$content.url}-->',
-                                bdPic: '<!--{$content.pic.url}-->'
-                            },
-                            share: [{
-                                "bdSize": 16
-                            }]
-                        }
-                        //以下为js加载部分
-                    with(document) 0[(getElementsByTagName('head')[0] || body).appendChild(createElement('script')).src = 'http://bdimg.share.baidu.com/static/api/js/share.js?cdnversion=' + ~(-new Date() / 36e5)];
-                    </script>
-                </div>
+                
             </div>
             <div class="clearfix mt10"> </div>
             <section class="bg-white comment">
