Перевод приложения "видео"

--- a/template/videoApp/video.htm
+++ b/template/videoApp/video.htm
@@ -28,7 +28,7 @@
                         <div class="thumb-shade"></div>
                         <div class="sort_lst_txt_btm_bg"></div>
                         <img src="<!--{$video.pic.url}-->" title="<!--{$video.title}-->" alt="<!--{$video.title}-->" height="360" width="258" onerror="this.onerror=null;this.src='<!--{$video.pic.url}-->'">
-                        <div class="srch-result-thumb-tit"><!--{$video.time}-->分钟</div>
+                        <div class="srch-result-thumb-tit"><!--{$video.time}-->Продолжительность видео в минутах</div>
                         <div class="srch-result-thumb-rgt"><em class="stress"><!--{$video.score}--></em></div>
                         <!-- <div class="sort_lst_thumb_tag_pay">付费</div> -->
                     </a>
