Заменя специфических китайских символов на UTF-8

--- a/template/ayxin01/a-footer.htm
+++ b/template/ayxin01/a-footer.htm
@@ -1,5 +1,5 @@
     <div class="foot" id="jzkow.">
-      <p>法律声明：本站内容均为网友上传，网站举办方负责审核和监督，如存在版权或非法内容，欢迎举报，我们将尽快予以删除.</p>
+      <p>法律声明:本站内容均为网友上传,网站举办方负责审核和监督,如存在版权或非法内容,欢迎举报,我们将尽快予以删除.</p>
       <p>CopyRight &copy; 2019 <!--{$site.name}-->, All Rights Reserved. Powered by<a href="https://www.icmsdev.com/" target="_blank">iCMS <!--{$iCMS.CONST.iCMS_VERSION}--></a></p>
 	  <p style="display:none;"><!--{$site.code|htmlspecialchars_decode}--></p>
 	  <p>Themes by<a href="https://www.reteng.org/" target="_blank">ReTeng</a></p>
