--- a/template/ayxin01/a-header.htm
+++ b/template/ayxin01/a-header.htm
@@ -1,6 +1,6 @@
     <div class="top">
       <div class="wrap">
-        <div class="txl fl">欢迎来到<!--{$site.name}-->！</div>
+        <div class="txl fl">欢迎来到<!--{$site.name}-->!</div>
         <ul id="txr" class="txr fr clearfix">
           <li class="nLi">
             <span>
