--- a/template/ayxin01/a-page.htm
+++ b/template/ayxin01/a-page.htm
@@ -20,7 +20,7 @@
   <!--{include file="./a-header.htm"}-->
     <div class="g_box1 u_1">
       <div class="weizhi fl">
-        <h3><!--{$category.name}--></h3>当前位置：
+        <h3><!--{$category.name}--></h3>当前位置:
         <a href="<!--{$site.url}-->">首页</a> / <!--{$category.name}--></div>
       <div class="search fr">
         <div class="so fr">
