--- a/template/videoApp/video.htm
+++ b/template/videoApp/video.htm
@@ -40,37 +40,37 @@
                         <!--{$video.title}-->
                     </h1>
                     <dl class="srch-result-info">
-                        <dt>上&nbsp;映：</dt>
+                        <dt>上&nbsp;映:</dt>
                         <dd class="srch-info-lft">
                             <!--{$video.release}-->
                         </dd>
-                        <dt>地&nbsp;区：</dt>
+                        <dt>地&nbsp;区:</dt>
                         <dd class="srch-info-lft" uigs="m_head_zone">
                             <!--{iCMS:url url="$category.url" area="$video.area"}-->
                             <a href="<!--{$url}-->" target="_blank" title="<!--{$video.area}-->">
                                 <!--{$video.area}-->
                             </a>
                         </dd>
-                        <dt>类&nbsp;型：</dt>
+                        <dt>类&nbsp;型:</dt>
                         <dd uigs="m_head_styles">
                             <!--{$video.genre_link}-->
                         </dd>
                         <div class="clearfix"></div>
-                        <dt>导&nbsp;演：</dt>
+                        <dt>导&nbsp;演:</dt>
                         <dd class="srch-info-lft">
                             <!--{$video.director_link}-->
                         </dd>
-                        <dt>主&nbsp;演：</dt>
+                        <dt>主&nbsp;演:</dt>
                         <dd>
                             <!--{$video.actor_link}-->
                         </dd>
                         <div class="clearfix"></div>
-                        <dt>别&nbsp;名：</dt>
+                        <dt>别&nbsp;名:</dt>
                         <dd>
                             <!--{$video.alias|replace:',':' / '}-->
                         </dd>
                         <div class="clearfix"></div>
-                        <dt class="dtd-intro">简&nbsp;介：</dt>
+                        <dt class="dtd-intro">简&nbsp;介:</dt>
                         <dd id="detail_intro" class="dtd-intro">
                             <!--{$video.description}-->
                             <a id="detail_btn" href="javascript:void(0)" class="btn-info-more">更多<i></i></a>
@@ -128,7 +128,7 @@
                                                     <img src="<!--{$video_list.pic.url}-->" width="77" height="103" alt="<!--{$video_list.title}-->">
                                                     <div class="hotlist-info">
                                                         <h2><!--{$video_list.title}--></h2>
-                                                        作者：<!--{$video_list.director}--><br>
+                                                        作者:<!--{$video_list.director}--><br>
                                                     </div>
                                                 </div>
                                             </a>
