--- a/template/videoApp/video.index.htm
+++ b/template/videoApp/video.index.htm
@@ -3,15 +3,7 @@
 
 <head>
     <title>
-        <!--{if $category.title}-->
-        <!--{$category.title}-->_
-        <!--{$site.title}-->
-        <!--{$category.name}-->
-        <!--{else}-->
-        <!--{$category.name}-->_
-        <!--{$site.title}-->_
-        <!--{$site.seotitle}-->
-        <!--{/if}-->
+    <!--{if $category.title}--><!--{$category.title}--><!--{else}--><!--{$category.name}--><!--{/if}-->
     </title>
     <meta name="keywords" content="<!--{$category.keywords}-->" />
     <meta name="description" content="<!--{$category.description}-->" />
@@ -52,7 +44,7 @@
                         <!--{if $video_list[0].description}-->
                         <p>
                             <!--{$video_list[0].description|cut:100}-->...
-                            <a href="<!--{$video_list[0].url}-->" target="_blank" class="blue">[详细]</a>
+                            <a href="<!--{$video_list[0].url}-->" target="_blank" class="blue">[Подробнее]</a>
                         </p>
                         <!--{/if}-->
                         <p class="clearfix dotted mb10"></p>
@@ -171,7 +163,7 @@
                     <div class="tabs-content">
                         <div class="tabs-pane" id="tabs_c0">
                             <div class="kwLink">
-                                <b>相关标签：</b>
+                                <b>相关标签:</b>
                                 <!--{iCMS:tag:list loop="true" row="20" orderby="hot" cid="$category.cid"}-->
                                 <a href="<!--{$tag_list.url}-->" target="_blank">
                                     <!--{$tag_list.name}-->
@@ -193,12 +185,12 @@
                                         <!--{if $video_list.description}-->
                                         <p class="media-text">
                                             <!--{$video_list.description|cut:110:'...'}-->
-                                            <a href="<!--{$video_list.url}-->" target="_blank" class="blue">[详细]</a>
+                                            <a href="<!--{$video_list.url}-->" target="_blank" class="blue">[Подробнее]</a>
                                         </p>
                                         <!--{/if}-->
                                         <div class="media-info">
                                             <span class="date"><!--{$video_list.pubdate|date:'Y-m-d H:i'}--></span>
-                                            <span class="category">分类：<!--{$video_list.category.link}--></span>
+                                            <span class="category">分类:<!--{$video_list.category.link}--></span>
                                             <!--{if $video_list.tags_link}-->
                                             <span class="tags"><!--{$video_list.tags_link}--></span>
                                             <!--{/if}-->
@@ -215,7 +207,7 @@
                         <!--{foreach value="catlist" from="$category_list"}-->
                         <div class="tabs-pane hide" id="tabs_c<!--{$catlist.cid}-->">
                             <div class="kwLink">
-                                <b>相关标签：</b>
+                                <b>相关标签:</b>
                                 <!--{iCMS:tag:list loop="true" row="20" orderby="hot" cid="$catlist.cid"}-->
                                 <a href="<!--{$tag_list.url}-->" target="_blank">
                                     <!--{$tag_list.name}-->
@@ -236,7 +228,7 @@
                                         </h4>
                                         <p class="media-text">
                                             <!--{$video_list.description|cut:100:'......'}-->
-                                            <a href="<!--{$video_list.url}-->" target="_blank" class="blue">[详细]</a>
+                                            <a href="<!--{$video_list.url}-->" target="_blank" class="blue">[Подробнее]</a>
                                         </p>
                                         <div class="media-info">
                                             <span class="date"><!--{$video_list.pubdate|date:'m月d日'}--></span>
