--- a/template/videoApp/video.list.htm
+++ b/template/videoApp/video.list.htm
@@ -4,7 +4,7 @@
 <head>
     <title>
         <!--{if $category.title}-->
-        <!--{$category.title}-->_
+        <!--{$category.title}-->
         <!--{$site.title}-->
         <!--{$category.name}-->
         <!--{else}-->
@@ -130,7 +130,7 @@
             <div id="no-result-wrap" class="no-result-wrap" style="display:none">
                 <div class="no-result">
                     <div class="no-result-thumb"></div>
-                    <div class="no-result-tit">抱歉！没找到任何结果，
+                    <div class="no-result-tit">抱歉!没找到任何结果,
                         <br>请重置筛选条件!</div>
                 </div>
             </div>
@@ -152,7 +152,7 @@
                                 <!--{$video_list.title}-->
                             </a>
                         </div>
-                        <p class="sort_lst_txt">主演：<!--{$video_list.actor|replace:',':'&nbsp;&nbsp;'}--></p>
+                        <p class="sort_lst_txt">主演:<!--{$video_list.actor|replace:',':'&nbsp;&nbsp;'}--></p>
                     </li>
                     <!--{iCMSelse}-->
                     <script>
