--- a/template/videoApp/video.play.htm
+++ b/template/videoApp/video.play.htm
@@ -89,7 +89,7 @@
                                                     <img src="<!--{$video_list.pic.url}-->" width="77" height="103" alt="<!--{$video_list.title}-->">
                                                     <div class="hotlist-info">
                                                         <h2><!--{$video_list.title}--></h2>
-                                                        作者：<!--{$video_list.director}--><br>
+                                                        作者:<!--{$video_list.director}--><br>
                                                     </div>
                                                 </div>
                                             </a>
