--- a/template/videoApp/video.tag.htm
+++ b/template/videoApp/video.tag.htm
@@ -53,7 +53,7 @@
                     <div class="tabs-content">
                         <div class="tabs-pane" id="tabs_c0">
                             <div class="kwLink">
-                                <b>相关标签：</b>
+                                <b>相关标签:</b>
                                 <!--{iCMS:tag:list loop="true" row="5" orderby="hot" cid="$category.cid"}-->
                                 <a href="<!--{$tag_list.url}-->" target="_blank">
                                     <!--{$tag_list.name}-->
@@ -74,11 +74,11 @@
                                                 </h4>
                                         <p class="media-text">
                                             <!--{$video_list.description|cut:110:'...'}-->
-                                            <a href="<!--{$video_list.url}-->" target="_blank" class="blue">[详细]</a>
+                                            <a href="<!--{$video_list.url}-->" target="_blank" class="blue">[Подробнее]</a>
                                         </p>
                                         <div class="media-info">
                                             <span class="date"><!--{$video_list.pubdate|date:'Y-m-d H:i'}--></span>
-                                            <span class="category">分类：<!--{$video_list.category.link}--></span>
+                                            <span class="category">分类:<!--{$video_list.category.link}--></span>
                                             <!--{if $video_list.tags_link}-->
                                             <span class="tags"><!--{$video_list.tags_link}--></span>
                                             <!--{/if}-->
