--- a/template/askApp/ask.tag.htm
+++ b/template/askApp/ask.tag.htm
@@ -3,7 +3,7 @@
     <head>
         <title>
         <!--{if $category.title}-->
-        <!--{$category.title}-->_
+        <!--{$category.title}-->
         <!--{$site.title}-->
         <!--{$category.name}-->
         <!--{else}-->
@@ -71,7 +71,7 @@
                         <div class="tabs-content">
                             <div class="tabs-pane" id="tabs_c0">
                                 <div class="kwLink">
-                                    <b>相关标签：</b>
+                                    <b>相关标签:</b>
                                     <!--{iCMS:tag:list loop="true" row="20" orderby="hot" sub="all" cid="$category.cid"}-->
                                     <a href="<!--{$tag_list.url}-->" target="_blank">
                                         <!--{$tag_list.name}-->
