--- a/template/askApp/widget/answer.form.htm
+++ b/template/askApp/widget/answer.form.htm
@@ -7,7 +7,7 @@
         <a href="<!--{iCMS:router url='user:register'}-->" target="_blank"><i class="fa fa-heart"></i> 注册</a>
     </div>
     <div class="alert alert-warning" role="alert">
-        <i class="fa fa-warning "></i> 请自觉遵守互联网相关的政策法规，严禁发布色情、暴力、反动的言论！
+        <i class="fa fa-warning "></i> 请自觉遵守互联网相关的政策法规,严禁发布色情、暴力、反动的言论!
     </div>
     <div class="ask-editor">
         <div class="clearfix mb10"></div>
@@ -17,7 +17,7 @@
     <div class="clearfix"></div>
     <div class="ask-command">
         <div class="ask-seccode">
-            <label for="seccode" class="control-label">验证码：</label>
+            <label for="seccode" class="control-label">验证码:</label>
             <input type="text" maxlength="4" i="ask_answer_seccode" class="seccode form-control" id="seccode" placeholder="请输入验证码">
             <!--{iCMS:public:seccode}-->
         </div>
