--- a/template/askApp/widget/dialog.htm
+++ b/template/askApp/widget/dialog.htm
@@ -18,7 +18,7 @@
 <div id="iCMS-QUESTION-DIALOG" style="display:none;">
   <div class="iCMS_QUESTION_DIALOG">
     <div class="alert alert-warning" role="alert">
-      <i class="fa fa-warning "></i> 请自觉遵守互联网相关的政策法规，严禁发布色情、暴力、反动的言论！
+      <i class="fa fa-warning "></i> 请自觉遵守互联网相关的政策法规,严禁发布色情、暴力、反动的言论!
     </div>
     <div class="form-group">
       <label for="ask_title" class="control-label">主题</label>
@@ -62,7 +62,7 @@
     <div class="clearfix"></div>
     <div class="ask-command">
       <div class="ask-seccode">
-        <label for="seccode" class="control-label">验证码：</label>
+        <label for="seccode" class="control-label">验证码:</label>
         <input type="text" maxlength="4" i="ask_question_seccode" class="seccode form-control" id="seccode" placeholder="请输入验证码">
         <!--{iCMS:public:seccode}-->
       </div>
