--- a/template/topicApp/topic.list.htm
+++ b/template/topicApp/topic.list.htm
@@ -4,7 +4,7 @@
 <head>
     <title>
         <!--{if $category.title}-->
-        <!--{$category.title}-->_
+        <!--{$category.title}-->
         <!--{$site.title}-->
         <!--{$category.name}-->
         <!--{else}-->
@@ -48,7 +48,7 @@
                     <div class="tabs-content">
                         <div class="tabs-pane" id="tabs_c0">
                             <div class="kwLink">
-                                <b>相关标签：</b>
+                                <b>相关标签:</b>
                                 <!--{iCMS:tag:list loop="true" row="20" orderby="hot" cid="$category.cid"}-->
                                 <a href="<!--{$tag_list.url}-->" target="_blank">
                                     <!--{$tag_list.name}-->
@@ -70,12 +70,12 @@
                                         <!--{if $topic_list.description}-->
                                         <p class="media-text">
                                             <!--{$topic_list.description|cut:110:'...'}-->
-                                            <a href="<!--{$topic_list.url}-->" target="_blank" class="blue">[详细]</a>
+                                            <a href="<!--{$topic_list.url}-->" target="_blank" class="blue">[Подробнее]</a>
                                         </p>
                                         <!--{/if}-->
                                         <div class="media-info">
                                             <span class="date"><!--{$topic_list.pubdate|date:'Y-m-d H:i'}--></span>
-                                            <span class="category">分类：<!--{$topic_list.category.link}--></span>
+                                            <span class="category">分类:<!--{$topic_list.category.link}--></span>
                                             <!--{if $topic_list.tags_link}-->
                                             <span class="tags"><!--{$topic_list.tags_link}--></span>
                                             <!--{/if}-->
