--- a/template/www/mobile/content.list.htm
+++ b/template/www/mobile/content.list.htm
@@ -3,7 +3,7 @@
   <head>
     <title>
     <!--{if $category.title}-->
-    <!--{$category.title}-->_
+    <!--{$category.title}-->
     <!--{$site.title}-->
     <!--{$category.name}-->
     <!--{else}-->
